src/objects/DMSPM__SPM_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>DMSPM__Age_Field_Name__c</fullName>
        <label>Age Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSPM__Billing_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Certain screens in SPM are capable of operating against reports which are based on billing data from the Opportunities with products report types. However not all orgs have these available. If an org does have them available you can enable SPM billing support here,</description>
        <label>Billing Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMSPM__Created_Date_Field_Name__c</fullName>
        <label>Created Date Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSPM__Disable_Pipeline_Trends__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting disables the Pipeline Trends module in SPM</description>
        <label>Disable Pipeline Trends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMSPM__Disable_Pipeline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting disables the Pipeline module in SPM</description>
        <label>Disable Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMSPM__Disable_Revenue_Outlook__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting disables the Sales Velocity module in SPM</description>
        <label>Disable Revenue Outlook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMSPM__Disable_Revenue_Trends__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting disables the Revenue Trends module in SPM</description>
        <label>Disable Revenue Trends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMSPM__Disable_Sales_Velocity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting disables the Sales Velocity module in SPM</description>
        <label>Disable Sales Velocity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMSPM__FLS_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FLS Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMSPM__Importance_Probability_Threshold__c</fullName>
        <defaultValue>40</defaultValue>
        <label>Importance Probability Threshold</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMSPM__Importance_Value_Threshold__c</fullName>
        <defaultValue>100000</defaultValue>
        <label>Importance Value Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMSPM__Landing_Tab__c</fullName>
        <label>Landing Tab</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSPM__Logging_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting prevents SPM from gathering usage information for the application.  The log data is stored in the org in the SPM Log Entry type.</description>
        <inlineHelpText>This setting prevents SPM from gathering usage information for the application.  The log data is stored in the org in the SPM Log Entry type.</inlineHelpText>
        <label>Logging Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMSPM__SPMHighRiskThreshold__c</fullName>
        <defaultValue>65</defaultValue>
        <description>Setting which indicates a risk percentage above which the opportunity is deemed to be a high risk</description>
        <label>SPM High Risk Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMSPM__SPMInactiveDays__c</fullName>
        <defaultValue>60</defaultValue>
        <description>Setting which specifies the number of days before an unmodified opportunity is considered inactive (default 60)</description>
        <label>SPM Inactive Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMSPM__SPMPebbleThreshold__c</fullName>
        <defaultValue>10000</defaultValue>
        <description>Setting which specifies a value below which opportunities are considered smaller than normal, or in SPM parlance are considered a Pebble.</description>
        <label>SPM Pebble Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMSPM__SPMPossibleThreshold__c</fullName>
        <defaultValue>40</defaultValue>
        <description>Probability Value above which an opportunity is considered as possibly closing</description>
        <label>SPM Possible Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMSPM__SPMProjectedThreshold__c</fullName>
        <defaultValue>70</defaultValue>
        <description>Probability value above which an opportunity is considered to be projected to close.</description>
        <label>SPM Projected Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMSPM__SPMQualifiedThreshold__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Probability above which an opportunity has been considered to be a qualified opportunity</description>
        <label>SPM Qualified Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMSPM__SPMRockThreshold__c</fullName>
        <defaultValue>100000</defaultValue>
        <description>Setting which specifies a value above which opportunities are considered larger than normal, or in SPM parlance are considered a Rock.</description>
        <label>SPM Rock Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMSPM__SPMStalledDays__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Setting which specifies how many days before an un modified opportunity is considered stalled (default 30)</description>
        <label>SPM Stalled Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMSPM__SPMTypicalOldThreshold__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Setting which determines the age at which an opportunity is considered old with regard to a typical opp</description>
        <label>SPM Typical Old Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMSPM__SPMTypicalYoungThreshold__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Setting which determines the age at which an opportunity is considered young with regard to a typical opp</description>
        <label>SPM Typical Young Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dealmaker SPM Settings</label>
</CustomObject>